--- a/compose-module.gradle
+++ b/compose-module.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation Compose.compiler
     implementation Compose.ui
     implementation Compose.uiToolingPreview
+    debugImplementation Compose.uiToolingPreviewDebug
     implementation Compose.hiltNavigationCompose
     implementation Compose.material
     implementation Compose.matIcon
