--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,54 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-.idea
-/.idea
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
+
+
+#Android
+*.apk
+*.ap_
+
+#Files for the Dalvik VM
+*.dex
+
+# Java class files
+*.class
+
+# Generated files
+bin/
+gen/
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
 local.properties
+
+
+# Log Files
+*.log
+
+# Android Studio Navigation editor temp files
+.navigation/
+
+# Android Studio captures folder
+captures/
+
+#Mac os X files
+.DS
+*.DS
+
+.idea/
+.iml
+*.hprof
+*.DS_Store
+
+#Compiles
+/app/release/*
+/app/build/*
+/build/*
