--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/Theme.Ruterito">
+        android:theme="@style/Theme.App.Ruterito.SlashScreen">
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="gsg.corp.ruterito.provider"
@@ -36,7 +36,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Ruterito"
+            android:theme="@style/Theme.App.Ruterito.SlashScreen"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
