--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/Theme.App.Ruterito.SlashScreen">
+        android:theme="@style/Theme.Ruterito"
+        tools:targetApi="n">
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="gsg.corp.ruterito.provider"
@@ -33,17 +34,19 @@
                 android:resource="@xml/provider_paths" />
         </provider>
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.App.Ruterito.SlashScreen"
-            android:windowSoftInputMode="adjustResize">
+            android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"
+            android:windowSoftInputMode="adjustResize"/>
+
+
     </application>
 
 </manifest>
