--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+URL_BASE_DEV="http://192.168.101.103:3000/api/"
+URL_BASE_PROD="https://back.gsgcorppe.com/api/"
+
+URL_BASE_TEST="http://192.168.101.103:3000/api/"
