add compressor library to compress image and save image to server and delete imagens on deviced

--- a/compose-module.gradle
+++ b/compose-module.gradle
@@ -71,6 +71,7 @@ dependencies {
 
     implementation Accompanist.permissions
     implementation Coil.coilCompose
+    implementation Compressor.compress
 
     kapt DaggerHilt.hiltCompiler
     implementation DaggerHilt.hiltAndroid
