--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,8 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-URL_BASE_DEV="http://192.168.101.110:3000/api/"
-URL_BASE_PROD="https://back.gsgcorppe.com/api/"
+# onboarding use DEV
+URL_BASE_DEV="https://demo1301424.mockable.io/"
+URL_BASE_PROD=""
 
-URL_BASE_TEST="http://192.168.0.27:3000/api/"
+URL_BASE_TEST="https://demo1301424.mockable.io/"
